--- a/templates/admin/template.html
+++ b/templates/admin/template.html
@@ -61,12 +61,24 @@
 
                   <td> {{template.created.date}}</td>
                   <td>
-                    
-                    <a href="{% url 'edit_template' id=template.id %}"> Edit Details</a>
-                    |
-                    <a href="{{template.template_image.url}}" target="_blank">View Image</a>
-                    |
-                    <a href="">Change Image</a>
+
+
+                    <div class="nav-item nav-profile dropdown">
+                      <a class="nav-link dropdown-toggle" id="profileDropdown" href="#" data-bs-toggle="dropdown"
+                          aria-expanded="false">
+                          <i class="mdi mdi-table-edit"></i>
+                      </a>
+                      <div class="dropdown-menu navbar-dropdown" aria-labelledby="profileDropdown">
+                          <a class="dropdown-item" href="{% url 'edit_template' id=template.id %}">
+                              <i class="mdi mdi-table-edit me-2 text-success"></i> Edit Details </a>
+                          <div class="dropdown-divider"></div>
+                          <a class="dropdown-item" href="{{template.template_image.url}}" target="_blank">
+                              <i class="mdi mdi-logout me-2 text-primary"></i> View Image</a>
+                          <div class="dropdown-divider"></div>
+                          <a class="dropdown-item" href="{% url 'change_status' id=template.id %}">
+                              <i class="mdi mdi-logout me-2 text-primary"></i> Change F. Status</a>
+                      </div>
+                    </div>
                   </td>
                 </tr>
                 {% endfor %}
